--- a/directoryserver/directoryserver.csproj
+++ b/directoryserver/directoryserver.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
 	  <IncludeNativeLibrariesForSelfExtract>True</IncludeNativeLibrariesForSelfExtract>
+	  <TrimMode>link</TrimMode>
   </PropertyGroup>
 
 </Project>
